[package]
name = "kmeans_colors"
version = "0.1.0"
authors = ["okaneco <47607823+okaneco@users.noreply.github.com>"]
edition = "2018"
exclude = ["test", "gfx"]
description = "Simple k-means clustering to find dominant colors in images."
homepage = "https://github.com/okaneco/kmeans-colors"
repository = "https://github.com/okaneco/kmeans-colors"
readme = "README.md"

keywords = ["kmeans", "clustering", "lab", "color", "rgb"]
categories = ["graphics", "multimedia::images", "mathematics"]
license = "MIT OR Apache-2.0"

[lib]
name = "kmeans_colors_lib"
path = "src/lib/mod.rs"

[[bin]]
name = "kmeans_colors"
path = "src/main.rs"

[dependencies]
structopt = { version = "0.3", default-features = false }

[dependencies.image]
version = "0.23"
default-features = false
features = ["jpeg", "png"]

[dependencies.palette]
version = "0.5"
default-features = false
features = ["std"]

[dependencies.png]
version = "0.16"
default-features = false
features = ["png-encoding"]

[dependencies.rand]
version = "0.7"
default-features = false
features = ["std"]

[dependencies.rand_chacha]
version = "0.2"
default-features = false

[profile.release]
lto = "thin"
