[package]
name = "kmeans_colors"
version = "0.3.0"
authors = ["okaneco <47607823+okaneco@users.noreply.github.com>"]
edition = "2018"
exclude = ["test", "gfx"]
homepage = "https://github.com/okaneco/kmeans-colors"
repository = "https://github.com/okaneco/kmeans-colors"
readme = "README.md"
keywords = ["kmeans", "clustering", "lab", "color", "rgb"]
categories = ["graphics", "multimedia::images", "mathematics"]
license = "MIT OR Apache-2.0"
description = """Simple k-means clustering to find dominant colors in images.\n
Backed by a generic k-means implementation offered as a standalone library."""

[features]
# Use default-features=false if using as a library
default = ["app"]

# Features required for building the binary
app = ["image", "png", "structopt", "palette_color"]

# Enable `palette` color types
palette_color = ["palette"]

[dependencies.image]
version = "0.23"
default-features = false
features = ["jpeg", "png"]
optional = true

[dependencies.palette]
version = "0.5"
default-features = false
features = ["std"]
optional = true

[dependencies.png]
version = "0.16"
default-features = false
features = ["png-encoding"]
optional = true

[dependencies.rand]
version = "0.7"
default-features = false
features = ["std"]

[dependencies.rand_chacha]
version = "0.2"
default-features = false

[dependencies.structopt]
version = "0.3"
default-features = false
optional = true

[profile.release]
lto = "thin"

[package.metadata.docs.rs]
no-default-features = true
features = ["palette_color"]
targets = []
