[package]
name = "kmeans_colors"
version = "0.6.0"
authors = ["okaneco <47607823+okaneco@users.noreply.github.com>"]
edition = "2018"
exclude = ["test", "gfx", ".github"]
homepage = "https://github.com/okaneco/kmeans-colors"
repository = "https://github.com/okaneco/kmeans-colors"
readme = "README.md"
keywords = ["kmeans", "clustering", "lab", "color", "rgb"]
categories = ["graphics", "multimedia::images", "mathematics"]
license = "MIT OR Apache-2.0"
description = """Simple k-means clustering to find dominant colors in images.
Backed by a generic k-means implementation offered as a standalone library."""

[features]
# Use default-features=false if using as a library
default = ["app"]

# Features required for building the binary
app = [
        "image",
        "palette_color",
        "structopt",
    ]

# Enable `palette` color types
palette_color = ["palette", "num-traits"]

[dependencies.image]
version = "0.24.6"
default-features = false
features = ["jpeg", "png"]
optional = true

[dependencies.palette]
version = "0.7.2"
default-features = false
features = ["std"]
optional = true

[dependencies.num-traits]
version = "0.2.16"
default-features = false
features = ["std"]
optional = true

[dependencies.rand]
version = "0.8.5"
default-features = false
features = ["std"]

[dependencies.rand_chacha]
version = "0.3.1"
default-features = false

[dependencies.structopt]
version = "0.3.26"
default-features = false
optional = true

[profile.release]
strip = true

[package.metadata.docs.rs]
no-default-features = true
features = ["palette_color"]
targets = []
